--- a/final.html
+++ b/final.html
@@ -183,11 +183,20 @@
 </div>
 
 
-<div class="container-gallery1"><p class="photo-gallery">Some of her extra ordinary painting</p></div>
+<p class="photo-gallery">MasterPiece of her Hand</p></div>
 
 
 <!-- photo gallery  -->
+<div class="photo-conatiner">
+  <div class="gallery">
+  <div class="img-box"><h3>MAins</h3></div>
+<div class="img-box" ><h3>MAns</h3></div>
+<div class="img-box"><h3>mansi</h3></div>
+<div class="img-box"><h3>as</h3></div>
+<div class="img-box"><h3>sad</h3></div>
+  </div>
 
+</div>
 
 
 
