--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!-- <div class="bubble"></div>
 <div class="bubble2"></div>
 <div class="bubble3"></div> -->
-<div class="started">Get Started</div>
+<div class="started " id="btn">Get Started</div>
 <div class="alert_message"></div>
 <div class="card"><p>SomeOnes <span>Birthday</span> is coming</p></div>
 <div class="wait"><p class="para" style="color: rgba(226, 241, 12, 0.973);">till Now waiting...</p></div>
@@ -58,6 +58,9 @@
   <textarea placeholder="Write anything " name="txt" id="non-secret" cols="30" rows="10" class="target"></textarea>
   <button class="sky">Send to sky</button>
 </div>
+
+
+
 
 
 <footer><p class="para">...</p></footer>
