--- a/final.html
+++ b/final.html
@@ -119,7 +119,7 @@
 <div class="popup">Very tasty😘</div>
 
 <div class="lds-heart"><div></div></div>
-<div class="hexagon-part">x
+<div class="hexagon-part">
   <div class="container">
    
     <div class="row">
