--- a/final.html
+++ b/final.html
@@ -92,7 +92,7 @@
     <div class="confetti-piece"></div>
     
   </div>
-  <h1 class="title">for chidiya only 🎂+👑 </h1>
+  <h1 class="title">Time-Weaver: girl 🎂+👑 </h1>
    
    <div class="content1">
     <div class="confetti">
