--- a/final.html
+++ b/final.html
@@ -272,7 +272,7 @@
   <div class="gallery">
   <div class="img-box"><h3 style="background-color: rgba(0, 255, 255, 0.274); padding: 5px; border-radius: 8px; color: black;">Feathered Headdress</h3></div>
 <div class="img-box" ><h3 style="background-color: rgba(0, 255, 255, 0.274); padding: 5px; border-radius: 8px; color: black;">City Hair</h3></div>
-<div class="img-box"><h3  style="color: red; text-shadow: 2px 2px black; background: rgba(27, 27, 27, 0.137); padding: 5px;">Crowned Skull</h3></div>
+<div class="img-box"><h3  style="color: red; text-shadow: 2px 2px black; background: rgba(27, 27, 27, 0.137); padding: 5px;">Crowned Skull ❤️</h3></div>
 <div class="img-box"><h3 style="background-color: rgba(0, 255, 255, 0.274); padding: 5px; border-radius: 8px; color: black; font-size: 20px;">The Weeping Tree Nymph</h3></div>
 <div class="img-box"><h3 style="color: white; font-family: 'poppins'; background-color: rgba(255, 192, 203, 0.473);">it's me butter<span style="text-decoration: line-through; color: black; background-color: rgba(0, 0, 0, 0.548); ">fly</span></h3></div>
   </div>
