--- a/final.html
+++ b/final.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class="thought">
-  <h2 style="text-align: center; color: blueviolet;">Some <span style="opacity: 0.1;;">copied</span> lines for my friend</h2>
+  <h2 style="text-align: center; color: blueviolet;">Some <span style="opacity: 0.8;;">best</span> lines for my friend</h2>
   <div class="para"><p>
     Happy Birthday, dear friend! 🎉🎂 Today is all about celebrating the incredible person you are and the joy you bring into our lives. Your friendship has been a source of strength, laughter, and countless cherished memories. May this year be filled with boundless happiness, success, and good health. As you blow out the candles and make a wish, know that I'm wishing for your dreams to come true and for your days to be filled with love and laughter. Here's to another amazing year of adventures and shared moments. Cheers to you, my wonderful friend! 🥳🥂"</p></div>
 </div>
