--- a/final.html
+++ b/final.html
@@ -76,7 +76,7 @@
   <div class="hidden-message-password">
     <label for="hidden" class="lab">Password Require</label>
     <input name="hidden" type="text" class="password" placeholder="Enter the hidden password">
-    <button type="submit" class="sure">Verify it</button>
+    <button type="submit" class="sure">unlock it</button>
   </div>
 </div>
 
